# sentinel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_KR.md  config.example.yaml  config.yaml  install.sh  pyproject.toml  sentinel.py  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
.pmpt/: README.md  config.json  plan-progress.json
.pmpt/.history/v1-20260227T140825/: .meta.json  plan.md  pmpt.ai.md  pmpt.md
.pmpt/.history/v10-20260306T192940/: .meta.json  pmpt.md
.pmpt/.history/v2-20260227T141402/: .meta.json
.pmpt/.history/v3-20260306T183655/: .meta.json  pmpt.md
.pmpt/.history/v4-20260306T184037/: .meta.json  pmpt.md
.pmpt/.history/v5-20260306T185136/: .meta.json  pmpt.ai.md  pmpt.md
.pmpt/.history/v6-20260306T190149/: .meta.json  pmpt.md
.pmpt/.history/v7-20260306T190720/: .meta.json  pmpt.ai.md
.pmpt/.history/v8-20260306T191113/: .meta.json  pmpt.md
.pmpt/.history/v9-20260306T191843/: .meta.json  pmpt.ai.md  pmpt.md
.pmpt/docs/: ai-security-layer-spec.md  plan.md  pmpt.ai.md  pmpt.md
docs/decisions/: 0001-host-context.md  0002-download-tracking.md  0003-context-cli.md  0004-pro-optionality.md  0005-daemon-reload.md  0006-config-mutation-fallback.md  0007-forensic-context.md  0008-notification-context-level.md  0009-backup-retention-policy.md  0010-self-update.md  0011-first-install-flow.md
docs/perf/: v0.11-lsof-2026-05-05.md  v0.9-profile-2026-05-03.md
docs/proposals/: v0.9-plan.md
docs/usage/: event-logs.md
scripts/: profile_lsof.py  profile_workload.py
sentinel_mac/: __init__.py  __main__.py  config.example.yaml  core.py  engine.py  event_logger.py  menubar_app.py  models.py  notifier.py
sentinel_mac/collectors/: __init__.py  agent_log_parser.py  context.py  fs_watcher.py  net_tracker.py  project_context.py  system.py  typosquatting.py
sentinel_mac/commands/: __init__.py  context.py  doctor.py  install.py  uninstall.py  update.py
sentinel_mac/installer/: __init__.py  config_init.py  plist.py  uninstall.py  verify.py
sentinel_mac/updater/: __init__.py  apply.py  detect.py  menubar_helpers.py  version.py
tests/: test_agent_log_parser.py  test_alerts.py  test_cmd_install.py  test_cmd_uninstall.py  test_config.py  test_context.py  test_context_cli.py  test_daemon_reload.py  test_dependencies.py  test_doctor.py  test_download_tracking.py  test_event_log_retention.py  test_fs_watcher.py  test_installer_config_init.py  test_installer_plist.py  test_installer_uninstall.py  test_integration.py  test_lsof_cache.py  test_menubar_update.py  test_net_tracker.py  test_notifier.py  test_project_context.py  test_report.py  test_typosquatting.py  test_update_command.py  test_updater_apply.py  test_updater_detect.py  test_updater_version.py
