[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mac"
version = "0.5.3"
description = "AI Agent Security Guardian for macOS — monitors system health and AI agent behavior (file access, network connections, risky commands) with smart alerts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "raunplaymore" },
]
keywords = ["macos", "monitoring", "ai", "security", "sentinel", "ai-agent", "file-watcher", "notification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9,<7",
    "pyyaml>=6.0,<7",
    "requests>=2.28,<3",
    "watchdog>=3.0,<5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/raunplaymore/sentinel"
Repository = "https://github.com/raunplaymore/sentinel"
Issues = "https://github.com/raunplaymore/sentinel/issues"
Funding = "https://buymeacoffee.com/pmpt_cafe"

[project.scripts]
sentinel = "sentinel_mac.core:main"

[tool.setuptools.packages.find]
include = ["sentinel_mac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
