[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mac"
version = "0.10.2"
description = "AI Agent Security Guardian for macOS — monitors system health and AI agent behavior (file access, network connections, risky commands) with smart alerts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "raunplaymore" },
]
keywords = ["macos", "monitoring", "ai", "security", "sentinel", "ai-agent", "file-watcher", "notification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9,<7",
    "pyyaml>=6.0,<7",
    "requests>=2.28,<3",
    "watchdog>=3.0,<5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5", "mypy>=1.8"]
app = ["rumps>=0.4.0,<1", "ruamel.yaml>=0.18,<1"]

[project.urls]
Homepage = "https://github.com/raunplaymore/sentinel"
Repository = "https://github.com/raunplaymore/sentinel"
Issues = "https://github.com/raunplaymore/sentinel/issues"
Funding = "https://buymeacoffee.com/pmpt_cafe"

[project.scripts]
sentinel = "sentinel_mac.core:main"
sentinel-app = "sentinel_mac.menubar_app:main"

[tool.setuptools.packages.find]
include = ["sentinel_mac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# v0.9 Track 2a ratchet — added B (bugbear), UP (pyupgrade), SIM (simplify).
# B surfaces real bugs (mutable default args, raise-from missing, etc.).
# UP modernizes syntax for the supported Python range (3.8+). SIM is a bonus
# cleanup ruleset. Re-evaluate adding more (PT, RUF, etc.) in a future ratchet.
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# Existing code may have long lines and bare-except; line length is enforced
# loosely (120) and bare-except is occasionally intentional in best-effort
# cleanup paths. E741 keeps single-letter loop vars allowed.
ignore = ["E501", "E722", "E741"]

[tool.ruff.lint.per-file-ignores]
# tests/* import modules after sys.path manipulation in several places — the
# `tests/conftest.py` style does not apply uniformly here, so E402 remains.
"tests/*" = ["E402"]

[tool.mypy]
# requires-python is 3.8, but mypy 1.20 dropped 3.8 support. CI matrix runs
# 3.9–3.13, so we type-check against the lowest CI Python.
python_version = "3.9"
ignore_missing_imports = true
# v0.9 Track 2b ratchet — was false. All untyped function bodies are now
# type-checked across the codebase. The previous `[[tool.mypy.overrides]]
# ignore_errors = true` for `core` / `menubar_app` / `agent_log_parser` /
# `fs_watcher` was removed in the same ratchet — every module is now
# checked.
check_untyped_defs = true
# v0.9 Track 2c ratchet — every public/private `def` in `sentinel_mac/`
# now carries parameter and return-type annotations. Future code that
# adds an unannotated function will fail mypy.
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
# `requests` ships its own types since 2.32 but on older installs mypy still
# flags `import-untyped`; ignore_missing_imports does not suppress it. Drop
# this when CI baseline pins types-requests.
disable_error_code = ["import-untyped"]
